welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: ':' expected but '.' found.
def hunt(Color.pink) {
              ^SlugSnail:35: error: identifier expected but '}' found.
}
^